Bug 92057 - PRINT:Crash on mailing by File Print Output to Printer
Summary: PRINT:Crash on mailing by File Print Output to Printer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-06-14 06:25 UTC by pierre-yves samyn
Modified: 2016-10-25 19:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Letter.odt (contains Bibliography field) (9.10 KB, application/vnd.oasis.opendocument.text)
2015-06-14 06:25 UTC, pierre-yves samyn
Details
windbg.txt (32.47 KB, text/plain)
2015-06-14 06:27 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2015-06-14 06:25:42 UTC
Created attachment 116516 [details]
Letter.odt (contains Bibliography field)

Hi

Steps to reproduce:
1. Open the Letter.odt attached (contains Identifier field from Bibliography)
2. File> Print, Message "You document contains addres..."
3. Click Yes
4. Dialog opens, select Output "Printer", Ok

Two dialogs open:
-lu3p7nf is being prepared for printing on lu3p7nf Letter 1 (lu3p7nf name changes each print)
-Standard Print dialog

5. Click Ok or Cancel in the Print dialog => Crash

See windbg.txt (backtrace).

Note: no crash with file output (or pdf creator)

Platform: Windows 7/64 & Version: 5.0.0.0.beta3
Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale: fr-FR (fr_FR)

Also reproduced (qa-fr) on Win 7 / x86 so I set status to New

Regards
Pierre-Yves
Comment 1 pierre-yves samyn 2015-06-14 06:27:19 UTC
Created attachment 116517 [details]
windbg.txt
Comment 2 Commit Notification 2015-06-15 12:02:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af8f938531909122ff7a056c2206af857324fdf3

Resolves: tdf#92057 crash on mail-merge to printer

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2015-06-15 12:03:59 UTC
It'd be great if the MM experts could pass and eye / test the above merge bustage fix
Comment 4 Commit Notification 2015-06-15 12:32:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6a2f00e8db0dab8d3b9eead6f8a4d2eee845a80&h=libreoffice-5-0

Resolves: tdf#92057 crash on mail-merge to printer

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.