Resolves: tdf#92057 crash on mail-merge to printer

this appears to be a mismerge of

commit e0ad036eed6b151ea81311fcf9ba46f1726b103c
Author: Luboš Luňák <l.lunak@collabora.com>
Date:   Thu Feb 19 16:39:06 2015 +0100

    mailmerge doesn't need to use the singlefile technique for printing

    It should be sufficient for every record to just update the fields and print
    the document. The printing code apparently rather expects to do the printing
    in one go, so split the functions up there.

    Conflicts:
        include/sfx2/viewsh.hxx
        include/vcl/print.hxx
        sfx2/source/view/viewprn.cxx
        sw/source/uibase/dbui/dbmgr.cxx
        sw/source/uibase/uno/unomailmerge.cxx
        vcl/source/gdi/print3.cxx

where the else if block is positioned at a nutty location

Change-Id: Ia22e9e53c27256131283babaf779e57f157ba6b8